--- a/style.css
+++ b/style.css
@@ -88,8 +88,10 @@ section.dashboard{
 
 .book > .down{
     display: flex;
-    flex-direction: column;
-    gap: 4px ;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 8px ;
 }
 
 [data-issued="true"]{
@@ -113,14 +115,6 @@ section.dashboard{
 }
 
 .delete-icon{
-    height: 100%;
-    width: 100%;
-}
-
-.delete-btn{
-    all: unset;
-    display: inline-block;
-    width: 1rem;
     height: 1rem;
 }
 
